--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "pinia": "^2.0.26",
+    "axios": "^1.3.2",
+    "buffer": "^6.0.3",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@arco-design/web-vue": "^2.39.1",
+    "@arco-design/web-vue": "^2.42.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
